<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoxFinder</string>
    <string name="action_settings">Settings</string>
    <string name="stranger_message">Stranger message</string>
    <string name="your_message">Your message</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="ip_address">IP address</string>
    <string name="wifi_name">WiFi name</string>
    <string name="wrong_ip_address">Wrong IP address</string>
    <string name="server_ip_address">Enter server\'s IP address</string>
    <string name="waiting_for_a_client">Waiting for a client</string>
    <string name="connect_error">Unable to connect to the server</string>
    <string name="disconnected">Disconnected</string>
    <string name="wifi_not_supported">WiFi is not supported</string>
    <string name="async_task">AsyncTask</string>
    <string name="greatest_value">The greatest value</string>
    <string name="generate_numbers">Generate numbers</string>
    <string name="send_button_image">Send button image</string>
    <string name="not_available">-</string>

</resources>